--- a/client/src/App.css
+++ b/client/src/App.css
@@ -162,3 +162,10 @@ html {
 .cancel{
   padding-left: 5px;
 }
+
+.hide-btn{
+    border: solid 1px black;
+    border-radius: 10px;
+    padding:10px;
+    cursor: pointer;
+}
