--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,6 +29,7 @@ html {
   display: flex;
   flex-direction: row;
   height: auto;
+  align-items: flex-start;
 }
 
 .sidebar-search{
@@ -40,12 +41,34 @@ html {
   transform: none;
   transition: transform 225ms cubic-bezier(0,0,0.2,1) 0ms;
 }
+.hide{
+  display: none;
+}
 
+.selected{
+  background-color: blue;
+  color: white;
+}
+.advanced-dropdown-items{
+  display: flex;
+  flex-direction: row;
+}
+.advanced-dropdown-subsection{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 /* .home_intro p{
   display: flex;
   flex-direction: row;
   align-items: center;
 } */
+.advanced-header{
+  border: solid 1px black;
+  display: flex;
+  flex-direction: row;
+  width: 100vw
+}
 
 .results{
   display: flex;
@@ -203,9 +226,11 @@ html {
 }
 .advanced-search{
   display: flex;
-  flex-wrap: wrap;
-  width: 80vw;
-  justify-content: center;
+    flex-wrap: nowrap;
+    width: 80vw;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .dropdown-check-label{
@@ -216,12 +241,17 @@ html {
   cursor: pointer;
   font-size: 1em;
 }
-
+.search-field{
+  display: flex;
+  align-items: center;
+}
 .toplevel-search{
   display: flex;
   flex-direction: row;
 }
-
+.sidebar{
+  width: 100% !important;
+}
 .advanced-search-hidden{
   display:none;
 }
