--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,7 +42,12 @@ html {
   transition: transform 225ms cubic-bezier(0,0,0.2,1) 0ms;
 }
 .hide{
-  display: none;
+  display: none !important;
+}
+.shadow-inner {
+  -moz-box-shadow:    inset 0 0 10px #000000;
+  -webkit-box-shadow: inset 0 0 10px #000000;
+  box-shadow:         inset 0 0 10px #000000;
 }
 
 .selected{
@@ -114,6 +119,10 @@ html {
   width: 20px;
   border: solid 1px black;
   transition: transform 1s; 
+}
+
+.sidebar-advanced-options{
+  width:100%
 }
 
 .sidebar-search-tab:hover{
