--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -8,46 +8,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piedmont Database</title>
+    <title>{% block title %} Piedmont Database {% endblock %}</title>
     <link href="{% static 'css/base.css' %}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
   </head>
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <i class="bi bi-flower3"></i>Piedmont Database
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      {% include 'components/navbar.html' %}
     </header>
 
     <main>
+      {% block main %}
       <div class="container">
         <div class="row">
           <div class="col"></div> <!-- Spacer column -->
           <div class="col-10">
+
+            {% block content %}
             <section class="card mb-4 mt-4">
               <div class="card-body">
                 <h2 class="card-title">Placeholder</h2>
@@ -65,23 +43,17 @@
                 </ul>
               </div>
             </section>
+            {% endblock content %}
+
           </div>
           <div class="col"></div> <!-- Spacer column -->
         </div>
       </div>
+      {% endblock main %}
     </main>
 
-    <footer class="bg-light mt-auto">
-      <div class="container py-3">
-        <div class="row">
-          <div class="col"></div> <!-- Spacer column -->
-          <div class="col-10 text-center">
-            <p>&copy; 2023 Piedmont Native Plant Database. All rights reserved.</p>
-          </div>
-          <div class="col"></div> <!-- Spacer column -->
-        </div>
-      </div>
-    </footer>
-
+    {% block footer %}
+      {% include 'components/footer.html' %}
+    {% endblock footer %}
   </body>
 </html>
