Updated html ids in navbar

--- a/frontend/templates/components/navbar.html
+++ b/frontend/templates/components/navbar.html
@@ -3,19 +3,19 @@
     <a class="navbar-brand" href="#">
       <i class="bi bi-flower3"></i>Piedmont Database
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="{% url 'frontend:base' %}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link" href="{% url 'frontend:plant_list' %}">Browse</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
