Moved template to root of project to be consistent with usual django project structure

--- a/templates/frontend/plant_detail.html
+++ b/templates/frontend/plant_detail.html
@@ -1,4 +1,4 @@
-{% extends 'components/base.html' %}
+{% extends 'frontend/components/base.html' %}
 
 {% block content %}
   <section class="card mb-4 mt-4">
