--- a/templates/frontend/components/base.html
+++ b/templates/frontend/components/base.html
@@ -9,13 +9,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Piedmont Database {% endblock %}</title>
-    <link href="{% static 'css/base.css' %}" rel="stylesheet">
+    <link href="{% static 'frontend/css/base.css' %}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
   </head>
 
   <body>
     <header>
-      {% include 'components/navbar.html' %}
+      {% include 'frontend/components/navbar.html' %}
     </header>
 
     <main>
@@ -53,7 +53,7 @@
     </main>
 
     {% block footer %}
-      {% include 'components/footer.html' %}
+      {% include 'frontend/components/footer.html' %}
     {% endblock footer %}
   </body>
 </html>
