--- a/templates/frontend/components/navbar.html
+++ b/templates/frontend/components/navbar.html
@@ -6,7 +6,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbar">
+    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbar">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="{% url 'frontend:base' %}">Home</a>
@@ -19,6 +19,11 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'frontend:login' %}">Login</a>
         </li>
       </ul>
     </div>
