--- a/templates/frontend/plant_list.html
+++ b/templates/frontend/plant_list.html
@@ -1,4 +1,4 @@
-{% extends 'components/base.html' %}
+{% extends 'frontend/components/base.html' %}
 
 {% block content %}
   {% for plant in plants %}
