--- a/templates/frontend/components/navbar.html
+++ b/templates/frontend/components/navbar.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse d-flex justify-content-between" id="navbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'frontend:base' %}">Home</a>
+          <a class="nav-link" href="{% url 'frontend:home' %}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
