--- a/templates/frontend/components/navbar.html
+++ b/templates/frontend/components/navbar.html
@@ -23,7 +23,11 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'frontend:login' %}">Login</a>
+          {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'frontend:logout' %}">Logout</a>
+          {% else %}
+            <a class="nav-link" href="{% url 'frontend:login' %}">Login</a>
+          {% endif %}
         </li>
       </ul>
     </div>
