--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -20,7 +20,7 @@
           </div>
         {% endif %}
 
-        <div class="mb-3">
+        <div class="form-group mb-3">
           {% if form.username.errors %}
             <div class="alert alert-danger" role="alert">
               {% for error in form.username.errors %}
@@ -32,7 +32,7 @@
           <input type="text" id="id_username" name="username" class="form-control" required>
         </div>
 
-        <div class="mb-3">
+        <div class="form-group mb-3">
           {% if form.password.errors %}
             <div class="alert alert-danger" role="alert">
               {% for error in form.password.errors %}
