--- a/templates/frontend/components/navbar.html
+++ b/templates/frontend/components/navbar.html
@@ -40,6 +40,9 @@
             <a class="nav-link" href="{% url 'frontend:login' %}">Login</a>
           {% endif %}
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'frontend:signup' %}">Signup</a>
+        </li>
       </ul>
     </div>
   </div>
