--- a/templates/frontend/plant_detail.html
+++ b/templates/frontend/plant_detail.html
@@ -3,10 +3,10 @@
 {% block content %}
   <section class="card mb-4 mt-4">
     <div class="card-body">
-      <h5 class="card-title">{{ plant.identifier.common_name }}</h5>
+      <h5 class="card-title">{{ plant.common_name }}</h5>
       <div class="mb-2 d-flex justify-content-between">
-        <h6 class="card-subtitle text-muted">{{ plant.identifier.latin_name }}</h6>
-        <h6 class="card-subtitle text-muted">{{ plant.datetime_added }}</h6>
+        <h6 class="card-subtitle text-muted">{{ plant.latin_name }}</h6>
+        <h6 class="card-subtitle text-muted">{{ plant.created_at }}</h6>
       </div>
       <p class="card-text">
         <hr class="mt-2 mb-2">
