--- a/templates/frontend/templatetags/bs_form_field.html
+++ b/templates/frontend/templatetags/bs_form_field.html
@@ -4,10 +4,15 @@
   {% if field.widget_type != 'select' %}
     {% bs_errors field.errors %}
     <label for="{{ field.id_for_label }}" class="form-label">{{ field.name|display_name }}</label>
-    <input type="{% if type %}{{ type }}{% else %}{{ field.widget_type }}{% endif %}" id="{{ field.id_for_label }}" name="{{ field.name }}" class="form-control" required>
+    <input
+        type="{% if type %}{{ type }}{% else %}{{ field.widget_type }}{% endif %}"
+        id="{{ field.id_for_label }}" name="{{ field.name }}"
+        class="form-control"
+        {% if required %} required {% endif %}
+    >
   {% else %}
     <label for="{{ field.id_for_label }}" class="form-label">{{ field.name|display_name }}</label>
-    <select id="{{ field.id_for_label }}" class="form-select" name="{{ field.name }}" required>
+    <select id="{{ field.id_for_label }}" class="form-select" name="{{ field.name }}">
       {% for widget in field.subwidgets %}
         <option value="{{ forloop.counter }}">{{ widget.data.label }}</option>
       {% endfor %}
